Created page with "= WPA2 with wpa_supplicant =  == Set wpa_supplicant usage for wlan0 ==  {{File|/etc/conf.d/net||<pre> modules_wlan0="wpa_supplicant" wpa_supplicant_wlan0="-Dwext" config_wlan0="d..."

--- a/Wpa_supplicant.mw
+++ b/Wpa_supplicant.mw
@@ -1,376 +1,40 @@
-<languages />
-<translate>
-<!--T:1-->
-<span>{{DISPLAYTITLE:wpa_supplicant}}</span> <!-- {{Lowercase title}} loses the underscore, please stop changing it. -->
-{{InfoBox stack
-|{{InfoBox homepage|https://w1.fi/wpa_supplicant/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox package|net-wireless/wpa_supplicant}}
-|{{InfoBox gitweb|https://w1.fi/cgit/hostap/|raw=true}}
-|{{InfoBox bugs|http://lists.infradead.org/mailman/listinfo/hostap}}
-{{InfoBox manpage|https://linux.die.net/man/8/wpa_supplicant|text=wpa_supplicant(8)|raw=true}}
-{{InfoBox manpage|https://linux.die.net/man/5/wpa_supplicant.conf|text=wpa_supplicant.conf(5)|raw=true}}
-}}
+= WPA2 with wpa_supplicant =
 
-<!--T:2-->
-'''wpa_supplicant''' is [[Article description::a wifi supplicant to handle network authentication.]]
+== Set wpa_supplicant usage for wlan0 ==
 
-== Installation == <!--T:3-->
-
-<!--T:4-->
-As a precondition, wireless support might need to be activated in the kernel as described in [[Wifi/IEEE_802.11]] as well as necessary [[Wifi|wireless device drivers]].<ref>{{Bug|623014}}</ref>
-
-=== USE flags === <!--T:5-->
-
-<!--T:6-->
-{{USEflag|package=net-wireless/wpa_supplicant}}
-
-=== Emerge === <!--T:7-->
-
-<!--T:8-->
-After USE flags have been reviewed, install {{Package|net-wireless/wpa_supplicant}} using Portage's {{c|emerge}} command:
-
-<!--T:9-->
-{{Emerge|net-wireless/wpa_supplicant}}
-
-== Configuration == <!--T:10-->
-
-=== Files === <!--T:11-->
-
-==== Setup for wireless interface ==== <!--T:13-->
-
-<!--T:14-->
-For usage with a single wireless interface only one configuration file will be needed. 
-
-<!--T:17-->
-{{FileBox|filename=/etc/wpa_supplicant/wpa_supplicant.conf|lang=ini|1=# Allow users in the 'wheel' group to control wpa_supplicant
-ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=wheel
- 
-# Make this file writable for wpa_gui / wpa_cli
-update_config=1}}
-
-<!--T:18-->
-To allow unprivileged users to control the connection using {{c|wpa_gui}} / {{c|wpa_cli}}, make sure the users are in the {{c|wheel}} [[Knowledge_Base:Adding_a_user_to_a_group|group]].
-
-This file does not exist by default; a well documented template configuration file can be copied from {{Path|/usr/share/doc/${P}/wpa_supplicant.conf.bz2}} where the value of the <var>P</var> variable is the name and version of the currently emerged wpa_supplicant:
-
-<!--T:15-->
-{{RootCmd|bzless /usr/share/doc/${P}/wpa_supplicant.conf.bz2 > /etc/wpa_supplicant/wpa_supplicant.conf}}
-
-==== Setup wired 802.1X ====
-It's possible to have wired connections handled via wpa_supplicant, which is useful for networks using 802.1X. Create a separate configuration file containing the wired configuration. Below example use certificates for authentication, check the wpa_supplicant.conf man page for examples of other methods.
-{{FileBox|filename=/etc/wpa_supplicant/wpa_supplicant_wired.conf|lang=bash|1=
-ctrl_interface=/var/run/wpa_supplicant
-eapol_version=1
-ap_scan=0
-fast_reauth=1
-
-network={
-	key_mgmt=IEEE8021X
-	eap=TLS
-	identity="COMPUTERAACT$@DOMAIN"
-	ca_cert="/etc/wpa_supplicant/ca.pem"
-	client_cert="/etc/wpa_supplicant/COMPUTERACCT.pem"
-	private_key="/etc/wpa_supplicant/COMPUTERAACT.key"
-	private_key_passwd="secret_password"
-	eapol_flags=0
-}
-}}
-Since the configuration file contains sensitive information, chmod accordingly.
-{{RootCmd|chmod 600 /etc/wpa_supplicant/wpa_supplicant_wired.conf}}
-wpa_supplicant needs some extra parameters to apply above configuration to the wired interface (eth0)
-Note that below wpa_supplicant arguments assumes wpa_supplicant is version >=2.6-r2 (-M, CONFIG_MATCH_IFACE=y)
-{{FileBox|filename=/etc/conf.d/wpa_supplicant|lang=bash|1=
-wpa_supplicant_args="-ieth0 -Dwired -c/etc/wpa_supplicant/wpa_supplicant_wired.conf -M -c/etc/wpa_supplicant/wpa_supplicant.conf"
-}}
-Let wpa_supplicant handle start/stop of the interfaces by removing them from /etc/init.d and enabling the wpa_supplicant daemon
-{{RootCmd
-|/etc/init.d/net.eth0 stop
-|/etc/init.d/net.wlan0 stop
-|rm /etc/init.d/net.wlan0 /etc/init.d/net.eth0
-|rc-update add wpa_supplicant
-|/etc/init.d/wpa_supplicant start
-}}
-Check the status of the wired interface via wpa_cli
-{{RootCmd|wpa_cli
-|collapse-output=true
-|output=<pre>wpa_cli v2.8
-Copyright (c) 2004-2019, Jouni Malinen <j@w1.fi> and contributors
-
-This software may be distributed under the terms of the BSD license.
-See README for more details.
-
-
-Selected interface 'p2p-dev-wlan0'
-
-Interactive mode
-
-> interface eth0
-Connected to interface 'eth0.
-> status
-bssid=00:00:00:00:00:00
-freq=0
-ssid=
-id=0
-mode=station
-pairwise_cipher=NONE
-group_cipher=NONE
-key_mgmt=IEEE 802.1X (no WPA)
-wpa_state=COMPLETED
-ip_address=10.10.10.100
-p2p_device_address=bb:bb:bb:bb:bb:bb
-address=aa:aa:aa:aa:aa:aa
-Supplicant PAE state=AUTHENTICATED
-suppPortStatus=Authorized
-EAP state=SUCCESS
-selectedMethod=13 (EAP-TLS)
-eap_tls_version=TLSv1
-EAP TLS cipher=ECDHE-RSA-AES256-SHA
-...
-</pre>
-}}
-
-== Setup the network manager ==
-
-<!--T:12-->
-{{Important|The solutions listed in [[Network_management#Available_software|Network management]] typically do not work together. Be sure only one of those services is running at a time. Starting more than one network management service '''will lead to unpredictable results'''!}}
-Be sure to choose the corresponding setup.
-
-=== Setup for dhcpcd as network manager === <!--T:19-->
-
-<!--T:20-->
-{{:Wpa_supplicant/Setup_for_dhcpcd_as_network_manager}}
-
-<!--T:21-->
-In case the deprecated [[Wifi#WEXT|WEXT]] driver is needed, changing the wireless driver can help resolve cases where it associates then immediately disconnects with '''reason 3'''. Run {{c|wpa_supplicant -h}} to see a list of the available drivers that were built at compile-time.
-
-<!--T:22-->
-{{FileBox|filename=/etc/conf.d/wpa_supplicant|title=set the driver to wext|lang=bash|1=
-wpa_supplicant_args="-D wext"
-}}
-
-=== Setup for Gentoo net.* scripts === <!--T:23-->
-
-<!--T:24-->
-Tell the [[Netifrc|network script]] to use wpa_supplicant:
-
-<!--T:25-->
-{{FileBox|filename=/etc/conf.d/net|lang=bash|1=
+{{File|/etc/conf.d/net||<pre>
 modules_wlan0="wpa_supplicant"
+wpa_supplicant_wlan0="-Dwext"
 config_wlan0="dhcp"
-}}
-
-<!--T:26-->
-After configuration below it is a good idea to change the permissions to ensure that WiFi passwords can not be viewed in plaintext by anyone using the computer:<ref>{{Bug|264000}}</ref>
-
-<!--T:27-->
-{{RootCmd|chmod 600 /etc/wpa_supplicant/wpa_supplicant.conf}}
-
-== Usage == <!--T:28-->
-
-=== Using wpa_gui === <!--T:29-->
-
-<!--T:30-->
-The simplest way to use wpa_supplicant is by using its interface called {{c|wpa_gui}}. To enable it, build wpa_supplicant with the [https://packages.gentoo.org/useflags/qt5 <code>qt5</code>] USE flag enabled.
-
-=== Using wpa_cli === <!--T:31-->
-
-<!--T:32-->
-Wpa_supplicant also has a command-line user interface. Typing {{c|wpa_cli}} starts its interactive mode with tab-completion. Typing <code>help</code> at this prompt will list the commands available (click "Expand" to view the output for the {{c|wpa_cli}} command below):
-
-<!--T:33-->
-{{Cmd
-|wpa_cli
-|collapse-output=true
-|output=<pre>wpa_cli v2.5
- Copyright (c) 2004-2015, Jouni Malinen <j@w1.fi> and contributors
- 
- This software may be distributed under the terms of the BSD license.
- See README for more details.
- 
- 
- Selected interface 'wlan0'
- 
- Interactive mode
- 
- > scan
- OK
- > scan_results
- bssid / frequency / signal level / flags / ssid
- 01:23:45:67:89:ab       2437    0       [WPA-PSK-CCMP+TKIP][WPA2-PSK-CCMP+TKIP][ESS]    hotel-free-wifi
- > add_network
- 0
- > set_network 0 ssid "hotel-free-wifi"
- OK
- > set_network 0 psk "password"
- OK
- > enable_network 0
- OK
- <3>CTRL-EVENT-SCAN-RESULTS 
- <3>WPS-AP-AVAILABLE 
- <3>Trying to associate with 01:23:45:67:89:ab (SSID='hotel-free-wifi' freq=2437 MHz)
- <3>Associated with 01:23:45:67:89:ab
- <3>WPA: Key negotiation completed with 01:23:45:67:89:ab [PTK=CCMP GTK=TKIP]
- <3>CTRL-EVENT-CONNECTED - Connection to 01:23:45:67:89:ab completed [id=0 id_str=]
- > save_config 
- OK
- > quit
 </pre>}}
+<br />
 
-<!--T:34-->
-More details on how to connect can be found in the Arch Linux wiki.<ref>https://wiki.archlinux.org/index.php/WPA_supplicant#Connecting_with_wpa_cli</ref>
+== Configure wpa_supplicant.conf ==
 
-=== Using wpa_passphrase === <!--T:35-->
-
-<!--T:36-->
-wpa_supplicant includes a tool to quickly write a network block from the command line for pre-shared key (WPA-PSK aka password) networks, {{c|wpa_passphrase}}.
-
-<!--T:37-->
-{{RootCmd|wpa_passphrase <ssid> [passphrase]}}
-
-<!--T:38-->
-The SSID is required. If omitted, the passphrase can be entered when prompted.
-
-<!--T:39-->
-The resulting output can then be copied or piped to {{Path|/etc/wpa_supplicant/wpa_supplicant.conf}}.
-
-=== Editing manually === <!--T:40-->
-
-<!--T:41-->
-Of course, the configuration file {{Path|/etc/wpa_supplicant/wpa_supplicant.conf}} could also be edited manually. However this can be very laborious if the computer needs to connect to many different access points.
-
-<!--T:42-->
-Examples can be found in {{c|man 5 wpa_supplicant.conf}} and {{Path|/usr/share/doc/wpa_supplicant-2.4-r3/wpa_supplicant.conf.bz2}}.
-
-==== WPA2 with wpa_supplicant ==== <!--T:43-->
-
-<!--T:44-->
-Connecting to any wireless access point serving ''YourSSID''
-
-<!--T:45-->
-{{FileBox|filename=/etc/wpa_supplicant/wpa_supplicant.conf|lang=properties|1=
-ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=wheel
+{{File|/etc/wpa_supplicant/wpa_supplicant.conf||<pre>
+ctrl_interface=/var/run/wpa_supplicant
+ctrl_interface_group=wheel
 #ap_scan=0
 #update_config=1
- 
+
 network={
         ssid="YourSSID"
         psk="your-secret-key"
         scan_ssid=1
-        proto=RSN
+        eap=TLS
+        proto=WPA2
         key_mgmt=WPA-PSK
         group=CCMP TKIP
         pairwise=CCMP TKIP
         priority=5
 }
-}}
-
-<!--T:46-->
-Using ''bssid'' to specify which access point it should connect to using its MAC address, in case there are repeaters in place. Remember to use wpa_passphrase <ssid> [passphrase] to generate the [[wikipedia:Pre-shared_key|psk]]
-
-<!--T:47-->
-{{FileBox|filename=/etc/wpa_supplicant/wpa_supplicant.conf|lang=properties|1=
-ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=wheel
-ap_scan=1
- 
-network={
-        bssid=00:50:17:31:1a:11
-        ssid="YourSSID"
-        psk="your-secret-key"
-        scan_ssid=1
-        proto=RSN
-        key_mgmt=WPA-PSK
-        group=CCMP TKIP
-        pairwise=CCMP TKIP
-        priority=5
-}
-}}
-
-==== Auto-connect to any unsecured network ==== <!--T:48-->
-
-<!--T:49-->
-{{FileBox|filename=/etc/wpa_supplicant/wpa_supplicant.conf|lang=ini|1=
-network={
-        key_mgmt=NONE
-        priority=-999
-}
-}}
-
-== Troubleshooting == <!--T:50-->
-
-<!--T:51-->
-In case it does not work as expected try some of the following and analyze the output.
-
-=== Check for known bugs === <!--T:52-->
-
-<!--T:53-->
-* {{Bug|wpa_supplicant|search=package}}
-* [http://lists.infradead.org/pipermail/hostap/ Upstream's mailing list archive]
-
-=== Run wpa_supplicant in debug mode === <!--T:54-->
-
-<!--T:55-->
-Be sure to stop any running instance of the supplicant:
-
-<!--T:56-->
-{{RootCmd|killall wpa_supplicant}}
-
-<!--T:57-->
-Something like the following options can be used for debugging (click "Expand" to view the output below):
-
-<!--T:58-->
-{{RootCmd
-|wpa_supplicant -Dnl80211 -iwlan0 -C/var/run/wpa_supplicant/ -c/etc/wpa_supplicant/wpa_supplicant.conf -dd
-|collapse-output=true
-|output=<pre>wpa_supplicant v2.2
-random: Trying to read entropy from /dev/random
-Successfully initialized wpa_supplicant
-Initializing interface 'wlp8s0' conf '/etc/wpa_supplicant/wpa_supplicant.conf' driver 'nl80211' ctrl_interface '/var/run/wpa_supplicant' bridge 'N/A'
-Configuration file '/etc/wpa_supplicant/wpa_supplicant.conf' -> '/etc/wpa_supplicant/wpa_supplicant.conf'
-Reading configuration file '/etc/wpa_supplicant/wpa_supplicant.conf'
-ctrl_interface='DIR=/var/run/wpa_supplicant GROUP=wheel'
-update_config=1
-Line: 6 - start of a new network block
 </pre>}}
 
-=== Enable logging === <!--T:59-->
 
-==== Enable logging for Gentoo net.* scripts ==== <!--T:60-->
+== Author ==
 
-<!--T:61-->
-{{FileBox|filename=/etc/conf.d/net|title=for usage with the [[#Setup_for_Gentoo_net..2A_scripts|Setup for Gentoo net.* scripts]]|lang=bash|1=
-modules_wlan0="wpa_supplicant"
-wpa_supplicant_wlan0="-Dnl80211 -d -f /var/log/wpa_supplicant.log"
-config_wlan0="dhcp"
-}}
+[[User:Xenoist|Joerg Neikes]]
 
-<!--T:62-->
-Now, within one terminal issue a {{c|tail}} command to monitor output and restart the {{c|net.wlan0}} device in another:
 
-<!--T:63-->
-{{RootCmd
-|tail -f /var/log/wpa_supplicant.log
-|/etc/init.d/net.wlan0 restart
-}}
-
-== References == <!--T:64-->
-
-<!--T:65-->
-{{reflist}}
-
-== See also == <!--T:66-->
-
-<!--T:67-->
-* {{See also|Iwd}}
-
-== External resources == <!--T:68-->
-
-<!--T:69-->
-* [https://forums.gentoo.org/viewtopic-t-1007254.html HOWTO: Remote access point with wpa_supplicant] (Gentoo Forums)
-* [https://en.wikipedia.org/wiki/Extensible_Authentication_Protocol Extensible Authentication Protocol] (Wikipedia)
-* [https://wiki.freeradius.org/protocol/EAP Extensible Authentication Protocol] (wiki.freeradius.org)
-* [https://forums.gentoo.org/viewtopic-t-1036958-start-4.html wpa_supplicant upstream just accepted patch to allow interface matching]
-* https://www.kb.cert.org/vuls/id/CHEU-AQNN3Z
-
-</translate>
-[[Category:Network management]] [[Category:Authentication]] [[Category:Wireless]]
+[[Category:Server and Security]]
+[[Category:Software]]
