--- a/Dell_XPS_13_Ultrabook.mw
+++ b/Dell_XPS_13_Ultrabook.mw
@@ -1,15 +1,16 @@
-{{Note|This article is for the old model of the Dell XPS 13. For the new (2015) model, see [[Dell_XPS_13_9343]]}}
+==Overview==
 
-{{InfoBox stack|{{InfoBox homepage|http://www.dell.com/us/dfh/p/xps-13-l321x/pd|header=true}}}}
-[[Image:Dell-xps-13-ultrabook.jpg|right]]
+This is an article about running Gentoo on an Dell XPS 13 Ultrabook.
 
-== Laptop Specifications ==
+==Laptop Specifications==
+
 Hardware specs may vary. These are the specs for the model XPS 13 Ultrabook:
+
 * Intel Core i5-2467M 1.6GHz to 2.3GHz or i7-2637M 1.7GHz to 2.9GHz, 3MB cache
-* 4-8GB Dual Channel DDR3 1333MHz
-* Intel HD Graphics 3000-4000 (on-CPU)
+* 3GB DDR2 RAM (2 slots)
+* Intel HD Graphics 3000 (on-CPU)
 * High Definition Audio with Waves MaxxAudio 4
-* 13.3in TFT LCD Widescreen screen (1366x768 or 1920x1080)
+* 11.6in TFT LCD Screen (Widescreen), 1366x768 WXGA
 * Samsung PM830 SATA 3 128GB or 256GB mSATA SSD Hard Disk
 * 1x USB 2.0 ports and 1x USB 3.0 ports
 * mini-DisplayPort output
@@ -83,7 +84,7 @@ xhci_hcd               65190  0
 }}
 
 Information from {{Path|/proc/cpuinfo}} :
-{{RootCmd|cat /proc/cpuinfo|output=<pre>
+{{File|/proc/cpuinfo||<pre>
 processor	: 0
 vendor_id	: GenuineIntel
 cpu family	: 6
@@ -103,11 +104,7 @@ fpu		: yes
 fpu_exception	: yes
 cpuid level	: 13
 wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse
-                  sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc
-                  aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2
-                  x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi
-                  flexpriority ept vpid
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2 x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi flexpriority ept vpid
 bogomips	: 3392.39
 clflush size	: 64
 cache_alignment	: 64
@@ -133,11 +130,7 @@ fpu		: yes
 fpu_exception	: yes
 cpuid level	: 13
 wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse
-                  sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc
-                  aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2
-                  x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi
-                  flexpriority ept vpid
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2 x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi flexpriority ept vpid
 bogomips	: 3392.39
 clflush size	: 64
 cache_alignment	: 64
@@ -163,11 +156,7 @@ fpu		: yes
 fpu_exception	: yes
 cpuid level	: 13
 wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse
-                  sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc
-                  aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2
-                  x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi
-                  flexpriority ept vpid
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2 x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi flexpriority ept vpid
 bogomips	: 3392.39
 clflush size	: 64
 cache_alignment	: 64
@@ -193,11 +182,7 @@ fpu		: yes
 fpu_exception	: yes
 cpuid level	: 13
 wp		: yes
-flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse
-                  sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc
-                  aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2
-                  x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi
-                  flexpriority ept vpid
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx rdtscp lm constant_tsc arch_perfmon pebs bts nopl xtopology nonstop_tsc aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 cx16 xtpr pdcm pcid sse4_1 sse4_2 x2apic popcnt tsc_deadline_timer aes xsave avx lahf_lm ida arat epb xsaveopt pln pts dts tpr_shadow vnmi flexpriority ept vpid
 bogomips	: 3392.39
 clflush size	: 64
 cache_alignment	: 64
@@ -206,38 +191,20 @@ power management:
 </pre>}}
 
 == Hardware Support ==
+{{WIP}}
 
 === Input Devices ===
 
-=== USB 2.0 Support ===
-* Compile the ehci-hcd driver as module.
-{{KernelBox|title=USB controller: Intel Corporation 7 Series/C210 Series Chipset Family USB Enhanced Host Controller #1 (rev 04)|1=
-Device Drivers  --->
-    [*] USB support  --->
-        <M>   EHCI HCD (USB 2.0) support
-            [*]   Root Hub Transaction Translators
-            [*]   Improved Transaction Translators scheduling
-}}
-
-=== USB 3.0 Support ===
-* Compile the xhci-hcd driver as module.
-{{KernelBox|title=USB controller: ''Fresco Logic Device 1009 (rev 02)'' or ''Intel Corporation 7 Series/C210 Series Chipset Family USB xHCI Host Controller (rev 04)'', 3.3.1-gentoo|1=
-Device Drivers  --->
-    [*] USB support  --->
-        <M>   xHCI HCD (USB 3.0) support
-}}
-N.B. A kernel version 3.3 at least is required for the USB 3 support.
-
 === Drives and Storage ===
 * Hard Drive controller works using ahci driver in the kernel.
-{{KernelBox|title=Intel Corporation 6 Series/C200 Series Chipset Family 6 port SATA AHCI Controller, 3.3.1-gentoo|1=
+{{Kernel|Intel Corporation 6 Series/C200 Series Chipset Family 6 port SATA AHCI Controller, 3.3.1-gentoo|<pre>
 Device Drivers  --->
     <*> Serial ATA and Parallel ATA drivers  --->
         <*>   AHCI SATA support
-}}
+</pre>}}
 
 === Graphics Chip ===
-{{KernelBox|title=Intel Corporation 2nd Generation Core Processor Family Integrated Graphics Controller, 3.3.1-gentoo|1=
+{{Kernel|Intel Corporation 2nd Generation Core Processor Family Integrated Graphics Controller, 3.3.1-gentoo|<pre>
 Device Drivers  --->
     Graphics support  --->
         <*> /dev/agpgart (AGP Support)  --->
@@ -245,51 +212,15 @@ Device Drivers  --->
         <*> Direct Rendering Manager (XFree86 4.1.0 and higher DRI support)  --->
             <*>   Intel 8xx/9xx/G3x/G4x/HD Graphics
             [*]     Enable modesetting on intel by default
-}}
+</pre>}}
 
 There is an issue with screen brightness which cannot be adjustable.
-There are two ways to work around this problem.
-
-The ''permanent'' way to fix this issue is to apply [https://bugzilla.kernel.org/attachment.cgi?id=97751 this patch] to the kernel sources. The patch is an attachment to [https://bugzilla.kernel.org/show_bug.cgi?id=47941 kernel bug #47941]. To apply the patch execute the following commands (tested in kernel 3.9.2).
-{{RootCmd
-|cd /usr/src/linux
-|wget <nowiki>'https://bugzilla.kernel.org/attachment.cgi?id=97751'</nowiki> -O backlight_fix.patch
-|patch -p1 --dry-run -i ./backlight_fix.patch
-|patch -p1 -i ./backlight_fix.patch # run this command only if the previous patch command gives no errors
-}}
-<br />
-The ''temporary'' way to work around the brightness issue is to run the following command.
-This is only a temporary solution because the command needs to be run on every boot, on every resume from suspend, and every time the screen is blanked by DPMS. This last issue is [https://bugzilla.kernel.org/show_bug.cgi?id=53491 kernel bug #53491].
+It is possible to workaround it by:
 {{RootCmd|echo 0 > /sys/class/backlight/intel_backlight/brightness}}
-
-Use a script to run it at start up.
-{{FileBox|filename=/etc/local.d/backlight.start|lang=bash|1=
-#!/bin/bash
-echo 0 > /sys/class/backlight/intel_backlight/brightness
-}}
-
-As well as after hibernate and suspend.
-{{FileBox|filename=/etc/pm/sleep.d/backlight|lang=bash|1=
-#!/bin/bash
-case "$1" in
-  suspend{{!}}hibernate)
-    #do nothing
-  ;;
-  resume{{!}}thaw)
-    echo 0 > /sys/class/backlight/intel_backlight/brightness
-  ;;
-  *)
-    exit 1
-  ;;
-esac
-exit 0
-}}
-
-Both scripts need to be executable.
-{{RootCmd|chmod +x /etc/local.d/backlight.start /etc/pm/sleep.d/backlight}}
+You can use the same command line to a /etc/local.d/blacklight.start start up script.
 
 === WLAN Card ===
-{{KernelBox|title=Intel Corporation Centrino Advanced-N 6230, 3.3.1-gentoo|1=
+{{Kernel|Intel Corporation Centrino Advanced-N 6230, 3.3.1-gentoo|<pre>
 [*] Networking support  --->
     [*]   Wireless  --->
         <*>   Generic IEEE 802.11 Networking Stack (mac80211)
@@ -298,97 +229,35 @@ Device Drivers  --->
     [*] Network device support  --->
         Wireless LAN  --->
             <M>   Intel Wireless WiFi Next Gen AGN - Wireless-N/Advanced-N/Ultimate-N (iwlwifi)
-}}
+</pre>}}
 
-You'll also need the firmware. Emerge either of the following packages.
-{{Emerge|sys-firmware/iwl6030-ucode}}
-or
-{{Emerge|sys-kernel/linux-firmware}}
+You'll also need the firmware:
+{{RootCmd|emerge net-wireless/iwl6030-ucode}}
 
 === CPU Frequency Scaling ===
-{{KernelBox|title=CPU Frequency Scaling|1=
+
+{{Kernel|CPU Frequency Scaling|<pre>
 Power management and ACPI options  --->
     CPU Frequency scaling  ---> 
     [*] CPU Frequency scaling
     <*>   ACPI Processor P-States driver
-}}
+</pre>}}
 
 === Sound Chip ===
-{{KernelBox|title=Sound device|1=
+{{Kernel|Sound device|<pre>
 Device Drivers  --->
     --- Sound card support  --->
         <M>   Advanced Linux Sound Architecture  ---> 
             [*]   PCI sound devices  --->
                 <M>   Intel HD Audio  --->
-}}
-
-=== Trackpad ===
-The support for the Cypress trackpad was added in Kernel 3.9.0 thanks to the [http://en.community.dell.com/techcenter/b/techcenter/archive/2012/05/07/developer-laptop-launches-project-sputnik.aspx Sputnik project].
-{{KernelBox|1=
-Device Drivers  --->
-    Input device support --->
-        -*- Generic input layer (needed for keyboard, mouse, ...)
-        [*]   Mice  --->
-            <M>   PS/2 mouse
-            [*]      Cypress PS/2 mouse protocol extension
-}}
+</pre>}}
 
 === Webcam ===
-The webcam will work using the v4l2 driver (tested) and sunplus driver (untested).
-{{KernelBox|title=Bus 001 Device 003: ID 1bcf:288f Sunplus Innovation Technology Inc.|1=
-Device Drivers  --->
-    <M> Multimedia support  --->
-        <M>   Video For Linux
-        [*]   Video capture adapters  --->
-                [*]   V4L USB devices  --->
-                    <M>   USB Video Class (UVC)
-                    [*]     UVC input events device support
-                    <M>   GSPCA based webcams  --->
-                        <M>   SUNPLUS USB Camera Driver
-}}
-Test it out with mplayer:
-{{RootCmd|mplayer tv:// -tv driver{{=}}v4l2:width{{=}}640:height{{=}}480:device{{=}}/dev/video0 -fps 15 -vf screenshot}}
+* Untested
 
-=== Bluetooth ===
-=== Kernel ===
-It is connected to the internal USB 2.0 port, so make sure to enable [[#USB 2.0 Support|USB 2.0 support]].
-You need [[PC-Card]] support. Also you need to activate the following kernel options:
-{{KernelBox|1=
-[*] Networking support  --->
-    <*> Bluetooth subsystem support  --->
-        
-        Select options for Bluetooth applications, see table below:
-        <*>   ...
-
-            Bluetooth device drivers  --->
-
-               Select a Bluetooth HCI driver, e.g.:
-               <*> HCI USB driver (btusb)
-}}
-
-=== Service ===
-You can now start bluetooth:
-{{RootCmd|/etc/init.d/bluetooth start}}
-To start bluetooth at boot time, add it your default runlevel:
-{{RootCmd|rc-update add bluetooth default}}
-
-== Problems ==
-
-=== Noisy fan ===
-On the core i7 model, the fan is running too often and too early. A BIOS upgrade resolved the issue.
+=== Problems ===
+* The fan was running too often and too early. A bios upgrade resolved the issue.
 http://www.dell.com/support/drivers/us/en/19/DriverDetails/DriverFileFormats?DriverId=C0VG5&FileId=2902722114&productCode=xps-13-l321x&urlProductCode=False
+* The TouchPad is a Cypress I2C and doesn't seem to have good opensource driver (I couldn't get the tap and multi-touch to work yet).
 
-=== Wireless ===
-When you're too close to a 802.11n router, the wireless hangs. This is a [http://bugzilla.intellinuxwireless.org/show_bug.cgi?id=2314 known issue] but the bugzilla was [http://wireless.kernel.org/en/users/Drivers/iwlwifi#Bugzilla disabled due to security issues].
-
-You can workaround this firmware issue by disabling 11n on your iwlwifi module.
-First try a temporary workaround:
-{{RootCmd|modprobe -rv iwldvm}}
-{{RootCmd|modprobe iwlwifi 11n_disable{{=}}1}}
-And if it works you can make it permanent:
-{{FileBox|filename=/etc/modprobe.d/iwlwifi.conf|1=
-options iwlwifi 11n_disable=1
-}}
-
-
-[[Category:Laptops]]
+[[Category:Hardware]]
