Created page with "{{WIP}}  DM-Crypt is a disk encryption system using the kernels crypto API framework and device mapper. dm-crypt is cappable of encrypting whole disks, logical volumes, single fi..."

--- a/Dm-crypt.mw
+++ b/Dm-crypt.mw
@@ -1,386 +1,3 @@
-<languages />
+{{WIP}}
 
-<translate>
-
-<!--T:1-->
-{{Metadata|abstract=DM-Crypt is a disk encryption system using the Linux kernel crypto API framework and device mapper subsystem.}}
-
-<!--T:2-->
-{{InfoBox stack
-|{{InfoBox homepage|https://gitlab.com/cryptsetup/cryptsetup|header=true}}
-|{{InfoBox wikipedia}}
-}}
-
-<!--T:3-->
-'''dm-crypt''' is [[Article description::a disk encryption system using the kernels crypto API framework and device mapper subsystem.]] With dm-crypt, administrators can encrypt entire disks, logical volumes, partitions, but also single files.
-
-<!--T:4-->
-The dm-crypt subsystem supports the ''Linux Unified Key Setup (LUKS)'' structure, which allows for multiple keys to access the encrypted data, as well as manipulate the keys (such as changing the keys, adding additional passphrases, etc.) Although dm-crypt supports non-LUKS setups as well, this article will focus on the LUKS functionality mostly due to its flexibility, manageability as well as broad support in the community.
-
-== Configuration == <!--T:5-->
-
-<!--T:6-->
-There are two prerequisites before one can start using dm-crypt:
-
-<!--T:7-->
-# Configuration of the Linux kernel
-# Installation of the {{Package|sys-fs/cryptsetup}} package
-
-=== Kernel Configuration === <!--T:8-->
-
-<!--T:9-->
-To use dm-crypt there are a number of configuration entries that are necessary.
-
-<!--T:10-->
-First of all, support for the ''device mapper'' infrastructure as well as the ''crypt target'' must be included:
-
-<!--T:11-->
-{{KernelBox|title=Enabling device mapper and crypt target|1=
-[*] Enable loadable module support
-Device Drivers --->
-    [*] Multiple devices driver support (RAID and LVM) --->
-        <*> Device mapper support
-        <*>   Crypt target support
-}}
-
-<!--T:12-->
-Next, the Linux kernel needs to support the set of cryptographic APIs that the administrator wants to use for encryption. These can be found under the ''Cryptographic API'' section:
-
-<!--T:13-->
-{{KernelBox|title=Enabling cryptographic API functions|1=
-[*] Cryptographic API --->
-    <*> XTS support
-    <*> SHA224 and SHA256 digest algorithm
-    <*> AES cipher algorithms
-    <*> AES cipher algorithms (x86_64)
-    <*> User-space interface for hash algorithms
-    <*> User-space interface for symmetric key cipher algorithms
-}}
-
-<!--T:14-->
-If the root file system will be encrypted as well, then an initial ram file system needs to be created in which the root filesystem is decrypted before it is mounted. Thus this requires initramfs support as well:
-
-<!--T:15-->
-{{KernelBox|title=Enabling initramfs support|1=
-General setup  --->
-    [*] Initial RAM filesystem and RAM disk (initramfs/initrd) support
-}}
-
-<!--T:88-->
-If using the ''tcrypt'' encryption option (TrueCrypt/tcplay/VeraCrypt compatibility mode), then the following items will also need to be added to the kernel.  Otherwise, cryptsetup will return the following errors: "''device-mapper: reload ioctl failed: Invalid argument''" and "''Kernel doesn't support TCRYPT compatible mapping''".
-
-<!--T:89-->
-{{KernelBox|title=Enabling tcrypt (TrueCrypt/tcplay/VeraCrypt compatibility mode) support|1=
-Device Drivers --->
-    [*] Block Devices ---> 
-        <*> Loopback device support 
-File systems ---> 
-     <*> FUSE (Filesystem in Userspace) support 
-[*] Cryptographic API ---> 
-     <*> RIPEMD-160 digest algorithm 
-     <*> SHA384 and SHA512 digest algorithms 
-     <*> Whirlpool digest algorithms 
-     <*> LRW support 
-     <*> Serpent cipher algorithm 
-     <*> Twofish cipher algorithm 
-}}
-
-=== Cryptsetup installation === <!--T:16-->
-
-<!--T:17-->
-The {{Package|sys-fs/cryptsetup}} package provides the {{c|cryptsetup}} command, which is used to open or close the encrypted storage as well as manage the passphrases or keys associated with it.
-
-<!--T:18-->
-{{Emerge|sys-fs/cryptsetup}}
-
-== Encrypted storage == <!--T:19-->
-
-=== Keyfile or passphrase === <!--T:20-->
-
-<!--T:21-->
-In order to start with encrypted storage, the administrator will need to decide which method to use for the encryption key. With {{c|cryptsetup}} the choice is either a passphrase or a keyfile. In case of a keyfile, this can be any file, but it is recommended to use a file with random data which is properly protected (considering that access to this keyfile will mean access to the encrypted data).
-
-<!--T:22-->
-To create a keyfile, one can use the {{c|dd}} command:
-
-<!--T:23-->
-{{RootCmd|dd if{{=}}/dev/urandom of{{=}}/etc/keys/enc.key bs{{=}}1 count{{=}}4096}}
-
-<!--T:24-->
-In the next sections, we will show every command for both situations - passphrase and keyfile. Of course, only one method is necessary.
-
-=== Creating an encrypted storage platform === <!--T:25-->
-
-<!--T:26-->
-In order to create an encrypted storage platform (which can be a disk, partition, file, ...) use the {{c|cryptsetup}} command with the <code>luksFormat</code> action.
-
-<!--T:27-->
-For instance, to have {{Path|/dev/vdb2}} as the storage medium for the encrypted data:
-
-<!--T:28-->
-{{RootCmd|cryptsetup -s 512 luksFormat /dev/vdb2|output=<pre>
-This will overwrite data on /dev/vdb2 irrevocably.
-  
-Are you sure? (Type uppercase yes): YES
-Enter LUKS passphrase: ...
-Verify passphrase: ...
-</pre>}}
-
-<!--T:29-->
-To use a keyfile instead of a passphrase:
-
-<!--T:30-->
-{{RootCmd|cryptsetup -s 512 luksFormat /dev/vdb2 /etc/keys/enc.key|output=<pre>
-This will overwrite data on /dev/vdb2 irrevocably.
-  
-Are you sure? (Type uppercase yes): YES
-</pre>}}
-
-<!--T:31-->
-The <code>-s 512</code> tells {{c|cryptsetup}} which keylength to use for the real encryption key (unlike the passphrase or keyfile, which are used to access this real encryption key).
-
-=== Opening the encrypted storage === <!--T:32-->
-
-<!--T:33-->
-In order to open up the encrypted storage (i.e. make the real data accessible through transparent decryption), use the <code>luksOpen</code> action.
-
-<!--T:34-->
-{{RootCmd|cryptsetup luksOpen /dev/vdb2 myname|output=<pre>
-Enter passphrase for /dev/vdb2: ...
-</pre>}}
-
-<!--T:35-->
-If a keyfile is used, then the command would look like so:
-
-<!--T:36-->
-{{RootCmd|cryptsetup luksOpen -d /etc/keys/enc.key /dev/vdb2 myname}}
-
-<!--T:37-->
-When the command finishes successfully, then a new device file called {{Path|/dev/mapper/myname}} will be made available. 
-
-<!--T:72-->
-If this is the first time this encrypted device is used, it needs to be formatted. The following example uses the [[Btrfs]] file system but of course any other file system will do:
-
-<!--T:73-->
-{{RootCmd|mkfs.btrfs /dev/mapper/myname}}
-
-<!--T:74-->
-Once the file system is formatted, or the formatting was already done in the past, then the device file can be mounted on the system:
-
-<!--T:38-->
-{{RootCmd|mount /dev/mapper/myname /home}}
-
-=== Closing the encrypted storage === <!--T:39-->
-
-<!--T:40-->
-In order to close the encrypted storage (i.e. ensure that the real data is no longer accessible through transparent decryption), use the <code>luksClose</code> action:
-
-<!--T:41-->
-{{RootCmd|cryptsetup luksClose myname}}
-
-<!--T:42-->
-Of course, make sure that the device is no longer in use.
-
-== Manipulating LUKS keys == <!--T:43-->
-
-<!--T:44-->
-LUKS keys are used to access the real encryption key. They are stored in slots in the header of the (encrypted) partition, disk or file.
-
-=== Listing the slots === <!--T:45-->
-
-<!--T:46-->
-With the <code>luksDump</code> action, information about the encrypted partition, disk or file can be shown. This includes the slots:
-
-<!--T:47-->
-{{RootCmd|cryptsetup luksDump /dev/vdb2|output=<pre>
-LUKS header information for /dev/vdb2
-  
-Version:        1
-Cipher name:    aes
-Cipher mode:    xts-plain64
-Hash spec:      sha1
-Payload offset: 4096
-MK bits:        512
-MK digest:      34 3b ec ac 10 af 19 e7 e2 d4 c8 90 eb a8 da 3c e4 4f 2e ce
-MK salt:        ff 7c 7f 53 db 53 48 02 a4 32 dc e0 22 fc a3 51
-                06 ba b3 48 b3 28 13 a8 7a 68 43 d6 46 79 14 fe
-MK iterations:  59375
-UUID:           2921a7c9-7ccb-4300-92f4-38160804e08c
-  
-Key Slot 0: ENABLED
-        Iterations:             241053
-        Salt:                   90 0f 0f db cf 66 ea a9 6c 7c 0c 0d b0 28 05 2f
-                                8a 5c 14 54 98 62 1a 29 f3 08 25 0c ec c2 b1 68
-        Key material offset:    8
-        AF stripes:             4000
-Key Slot 1: ENABLED
-        Iterations:             273211
-        Salt:                   01 4c 26 ed ff 18 75 31 b9 89 5d a6 e0 b5 f4 14
-                                48 d0 23 47 a9 85 78 fb 76 c4 a9 d0 cd 63 fb d7
-        Key material offset:    512
-        AF stripes:             4000
-Key Slot 2: DISABLED
-Key Slot 3: DISABLED
-Key Slot 4: DISABLED
-Key Slot 5: DISABLED
-Key Slot 6: DISABLED
-Key Slot 7: DISABLED
-</pre>}}
-
-<!--T:48-->
-In the above example, two slots are used. Note that <code>luksDump</code> does not give away anything sensitive - it is merely displaying the LUKS header content. No decryption key has to be provided in order to call <code>luksDump</code>.
-
-=== Adding a keyfile or passphrase === <!--T:49-->
-
-<!--T:50-->
-In order to add an additional keyfile or passphrase to access the encrypted storage, use the <code>luksAddKey</code> action:
-
-<!--T:51-->
-{{RootCmd|cryptsetup luksAddKey /dev/vdb2|output=<pre>
-Enter any passphrase: (Enter a valid, previously used passphrase to unlock the key)
-Enter new passphrase for key slot: ... 
-Verify passphrase: ...
-</pre>}}
-
-<!--T:52-->
-To use a keyfile to unlock the key (but still add in a passphrase):
-
-<!--T:53-->
-{{RootCmd|cryptsetup luksAddKey -d /etc/keys/enc.key /dev/vdb2|output=<pre>
-Enter new passphrase for key slot: ...
-Verify passphrase: '''
-</pre>}}
-
-<!--T:54-->
-If a keyfile is to be added (say {{Path|/etc/keys/backup.key}}):
-
-<!--T:55-->
-{{RootCmd|cryptsetup luksAddKey /dev/vdb2 /etc/keys/backup.key}}
-
-<!--T:56-->
-Or, to use the first keyfile to unlock the main key:
-
-<!--T:57-->
-{{RootCmd|cryptsetup luksAddKey -d /etc/keys/enc.key /dev/vdb2 /etc/keys/backup.key}}
-
-=== Removing a keyfile or passphrase === <!--T:58-->
-
-<!--T:59-->
-With the <code>luksRemoveKey</code> action, a keyfile or passphrase can be removed (so they can no longer be used to decrypt the storage):
-
-<!--T:60-->
-{{RootCmd|cryptsetup luksRemoveKey /dev/vdb2|output=<pre>
-Enter LUKS passphrase to be deleted: ...
-</pre>}}
-
-<!--T:61-->
-Or to remove a keyfile:
-
-<!--T:62-->
-{{RootCmd|cryptsetup luksRemoveKey -d /etc/keys/backup.key /dev/vdb2}}
-
-<!--T:63-->
-Make sure that at least one method for accessing the data is still available. Once a passphrase or keyfile is removed for use, this cannot be recovered again.
-
-=== Emptying a slot === <!--T:64-->
-
-<!--T:65-->
-Suppose the passphrase or keyfile is no longer known, then the slot can be freed. Of course, this does require prior knowledge of which slot that the passphrase or keyfile was stored in.
-
-<!--T:66-->
-For instance, to empty out slot 2 (which is the third slot as slots are numbered starting from 0):
-
-<!--T:67-->
-{{RootCmd|cryptsetup luksKillSlot /dev/vdb2 2}}
-
-<!--T:68-->
-This command will ask for a valid passphrase before continuing. Or one can pass on the keyfile to use:
-
-<!--T:69-->
-{{RootCmd|cryptsetup luksKillSlot -d /etc/keys/enc.key /dev/vdb2 2}}
-
-== Automate mounting encrypted file systems == <!--T:75-->
-
-<!--T:76-->
-Until now, the article focused on manual setup and mounting/unmounting of encrypted file systems. An init service {{Path|dmcrypt}} exists which automates the decrypting and mounting of encrypted file systems.
-
-=== Configuring dm-crypt === <!--T:77-->
-
-<!--T:78-->
-Edit the {{Path|/etc/conf.d/dmcrypt}} file and add in entries for each file system. The supported entries are well documented in the file, the below example is just that - an example:
-
-<!--T:79-->
-{{FileBox|filename=/etc/conf.d/dmcrypt|title=Automatically enabling two encrypted file systems|1=
-# Definition for /dev/mapper/home (for /home)
-target=home
-source=UUID="abcdef12-321a-a324-a88c-cac412befd98"
-key=/etc/keys/home.key
- 
-# Definition for /dev/mapper/local (for /usr/local)
-target=local
-source=UUID="fedcba34-4823-b423-a94c-cadbefda2943"
-key=/etc/keys/local.key
-}}
-
-=== Configuring fstab === <!--T:80-->
-
-<!--T:81-->
-The next step is to configure {{Path|/etc/fstab}} to automatically mount the (decrypted) file systems when they become available. It is recommended to first obtain the UUID of the decrypted (mounted) file system:
-
-<!--T:82-->
-{{RootCmd|blkid /dev/mapper/home|output=<pre>
-/dev/mapper/home: UUID="4321421a-4321-a6c9-de52-ba6421efab76" TYPE="ext4"
-</pre>}}
-
-<!--T:83-->
-Then, update the {{Path|/etc/fstab}} file accordingly:
-
-<!--T:84-->
-{{FileBox|filename=/etc/fstab|title=Automounting the decrypted file systems|1=
-UUID="4321421a-4321-a6c9-de52-ba6421efab76"   /home        ext4   defaults   0   0
-UUID="bdef2432-3bd1-4ab4-523d-badcf234a342"   /usr/local   ext4   defaults   0   0
-}}
-
-=== Add initscript to bootlevel === <!--T:85-->
-
-<!--T:86-->
-Don't forget to have the {{Path|dmcrypt}} init service launched at boot:
-
-<!--T:87-->
-{{RootCmd|rc-update add dmcrypt boot}}
-
-
-=== Make decrypted device nodes visible ===
-
-If you have decrypted/unlocked a device before the services were started for example your root disk in an with an initramfs then it's possible that the mapped device is not visible. In this case you can run the following to recreate it.
-
-{{RootCmd|dmsetup mknodes}}
-
-== Mounting TrueCrypt/tcplay/VeraCrypt volumes == <!--T:90-->
-
-<!--T:91-->
-{{RootCmd|cryptsetup --type tcrypt open ''container-to-mount'' ''container-name''}}
-
-<!--T:92-->
-Replace ''container-to-mount'' with the device file under {{Path|/dev}} or the path to the file you wish to open. Upon successful opening, the plaintext device will appear as {{Path|/dev/mapper/container-name}}, which you can <code>mount</code> like any normal device.
-
-<!--T:93-->
-If you are using key files, supply them using the <code>--key-file</code> option, to open a hidden volume, supply the <code>--tcrypt-hidden</code> option and for a partition or whole drive that is encrypted in system mode use the <code>--tcrypt-system</code> option.
-
-<!--T:94-->
-When done, <code>unmount</code> the volume, and close the container using the following command:
-
-<!--T:95-->
-{{RootCmd|cryptsetup close ''container-name''}}
-
-== See also ==
-
-* {{See also|Dm-crypt full disk encryption}}
-
-== External resources ==
-
-* The [https://gitlab.com/cryptsetup/cryptsetup/wikis/FrequentlyAskedQuestions cryptsetup FAQ] hosted on GitLab covers a wide range of frequently asked questions.
-
-</translate>
-
-[[Category:Core system]]
+DM-Crypt is a disk encryption system using the kernels crypto API framework and device mapper. dm-crypt is cappable of encrypting whole disks, logical volumes, single files and RAID volumes.
