--- a/Autossh.mw
+++ b/Autossh.mw
@@ -1,62 +1,29 @@
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|https://www.harding.motd.ca/autossh/index.html|header=true}}
-|{{InfoBox odoc|https://www.harding.motd.ca/autossh/README.txt}}
-}}
+<big>Install...</big>
 
-AutoSSH is [[Article description::a command that detects when [[SSH]] connections drop and automatically reconnects them.]]
+emerge -av net-misc/autossh
 
-== Installation ==
+(there are no USE flags for this package)
 
-=== USE flags ===
 
-{{USEflag|package=net-misc/autossh}}
+<big>Basic Instructions</big>
 
-=== Emerge ===
+These are available at the autossh website and its README file:
+* http://www.harding.motd.ca/autossh/
+* http://www.harding.motd.ca/autossh/README
 
-{{Emerge|net-misc/autossh}}
 
-== Configuration ==
-
-=== Important tips ===
+<big>Important Tips</big>
 
 The "-M" option '''is''' required, even if you don't want to use the monitoring option  (in which case, use "-M 0").
 
 When using "-M"...
-
 * Connections are tunnelled.  No firewall changes needed for autossh's monitoring feature.
 * Ports need to be above 1024 if you are not logging in as root.
-* If you use a password prompt, then autossh will wait for your password when it reconnects, and it won't be fully connected until you give that password. So, it's helpful to use a key (instead of password) and ssh-agent.
-
-=== Examples ===
-
-;1) Simple login example
-{{Cmd|autossh -M 0 username@myserver}}
-
-;2) More Complex Example
-SSH on port 222. Setup a SOCKS proxy on port 9999.  Using "ServerAliveInterval" and "ServerAliveCountMax" as recommended in the autossh README file. 
-{{Cmd|autossh -M 0 -p 222 -N -D 9999 -o "ServerAliveInterval 45" -o "ServerAliveCountMax 2" username@myserver}}
-
-;3) Use autossh with sshfs
-{{Cmd|sshfs -o reconnect,compression{{=}}yes,transform_symlinks,ServerAliveInterval{{=}}45,ServerAliveCountMax{{=}}2,ssh_command{{=}}'autossh -M 0' username@server:/ /mnt/remote"}}
-
-== Removal ==
-
-=== Unmerge ===
-
-{{Emerge|params+=--unmerge|net-misc/autossh}}
-
-== See also ==
-
-* {{See also|SCP}}
-* {{See also|SFTP}}
-* {{See also|SSH}}
-* {{See also|SSHFS}}
-
-== External resources ==
-
-* https://wiki.openwrt.org/doc/howto/autossh - OpenWRT's wiki page on autossh.
-* https://www.linuxjournal.com/content/autossh-all-your-connection-lost - A short autossh article written by Linux Journal.
+* If you use a password prompt, then autossh will wait for your password when it reconnects, and it won't be fully connected until you give that password. 
 
 
-[[Category:SSH]]
+<big>Example</big>
+
+This example uses SSH port 222 on the remote server, and sets up a SOCKS proxy on port 9999.  The "sleep" command is used instead of SSH's "-N" option so that a "Connected" message is provided upon successful login.
+
+autossh -M 0 -p 222 -D 9999 -o "ServerAliveInterval 45" -o "ServerAliveCountMax 2" root@myserver 'echo && echo -e "Connected.\n" && sleep 9999999'
