--- a/DRBD.mw
+++ b/DRBD.mw
@@ -1,45 +1,4 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.linbit.com/en/drbd-community/drbd-download/|header=true}}
-|{{InfoBox wikipedia|Distributed Replicated Block Device}}
-}}
+'''DRBD''' (or '''Distributed Redundant Block Device''') is a network filesystem that provides reliability when storing data across multiple network nodes.  It can be thought of as 'network [[RAID]]'.
 
-{{Archived}}
-
-{{Note|As of 2019, DRBD is no longer include in Gentoo's main package repository. It may be [http://gpo.zugaina.org/sys-cluster/drbd available somewhere in an overlay].}}
-
-'''DRBD''' (or '''Distributed Replicated Block Device''') is [[Article description::a network block device that provides reliability when storing data across multiple network nodes.]]
-
-From the kernel documentation:
-
-<blockquote>''DRBD is a shared-nothing, synchronously replicated block device. It is designed to serve as a building block for high availability clusters and in this context, is a "drop-in" replacement for shared storage. Simplistically, you could see it as a network RAID 1.''</blockquote>
-
-== Installation ==
-
-=== Kernel ===
-
-{{KernelBox|title=Enable CONFIG_BLK_DEV_DRBD in the kernel|
-Device Drivers --->  Block devices --->
-<*>   DRBD Distributed Replicated Block Device support
-}}
-
-=== Emerge ===
-
-Install {{Package|sys-cluster/drbd}}:
-
-{{Emerge|sys-cluster/drbd}}
-
-This package installs the userland utilities to interact with, and control DRBD. Also known as {{c|drbdsetup}} and {{c|drbdadm}}.
-
-== Troubleshooting ==
-
-=== Errors ===
-
- "ERROR: unknown cs for drbd0 : BrokenPipe, Update/DUnknown"
-
-This error means connection state has a problem, link needs fixing, or drbd version updating.  Upstream states "we had some issues with discarding the first successful connection and getting in a connect/brokenpipe loop."
-
-Run this command to extract useful information:
-
-{{RootCmd|cat /proc/drbd}}
-
-[[Category:Core system]]
+==External links==
+*[http://www.drbd.org/users-guide/ The DRBD User’s Guide]
